@@ -843,6 +843,8 @@
 #define IDC_CVP_BUT_FONT_EVERYTHINGELSE 725
 #define IDC_BALL_DECAL_EDIT             725
 #define IDC_THROW_BALLS_ALWAYS_ON_CHECK 725
+#define IDC_                            726
+#define IDC_TARGET_RAISE_DELAY_EDIT     726
 #define IDC_CVP_BUT_COL_BACKGROUND      727
 #define IDC_CVP_EDIT_AUTOCHARS          728
 #define IDC_CVP_EDIT_MOUSEDWELL         729
@@ -988,7 +990,7 @@
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        620
 #define _APS_NEXT_COMMAND_VALUE         4008
-#define _APS_NEXT_CONTROL_VALUE         726
+#define _APS_NEXT_CONTROL_VALUE         727
 #define _APS_NEXT_SYMED_VALUE           188
 #endif
 #endif
